@@ -1,3 +1,9 @@
+2010-01-09 Jesse Kornblum
+
+	* Finished updating download links. Updated and published
+	  Hashdeep quick start guide
+
+	
 2009-12-30 Jesse Kornblum
 
 	* Converting documentation update to use rsync+ssh to upload content
